*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.23 ===
* Added <common/variadic.h> header for support of variadic templates.

=== 1.0.22 ===
* Updated build scripts.

=== 1.0.21 ===
* Got rid of the <windows.h> plague header in header files.
* Better workaround for vasprintf function.
* Support for compilation with Clang under AArch64.
* Support for compilation with Clang under ARMv6 and ARMv7.
* Updated build scripts.

=== 1.0.20 ===
* Updated implementation of lsp_finally macro. Now it became debuggable.
* Updated build scripts.

=== 1.0.19 ===
* Updated assembly code for bits.
* Better compatibility with clang (removed 'register' keyword).

=== 1.0.18 ===
* Added lsp_finally macro definition for automatic scope finalizers.
* Changed C++ standard support to at least C++ 11.
* Updated dependencies.
* Updated build scripts.

=== 1.0.17 ===
* Updated build scripts.

=== 1.0.16 ===
* Updated build system.

=== 1.0.15 ===
* Added update_status function for accumulating error code in status_t variable.
* Added lsp::lsp_malloc template function for allocating arrays.
* Added lsp::StaticInitializer, lsp::StaticFinalizer and lsp::StaticManager classes for static data.
* Added placeholders for log functions when they are not used.
* Fixed typo in version function definition.
* Moved some function implementation from types.h header to types.cpp.
* Fixed bug in log redirection to file.
* Added support of building under LoongArch32 and LoongArch64 architectures.
* Added support of building under 32-bit and 64-bit RISC-V architectures.

=== 1.0.14 ===
* Added lsp_xlimit function to limit ranges for both min < max and min >= max ranges.
* Added VERBOSE flag support by the make tools.
* Added detection of the glibc library usage.

=== 1.0.13 ===
* Added IF_TRACE and IF_DEBUG macros to <common/debug.h>.
* Updated build.

=== 1.0.12 ===