@@ -4,6 +4,7 @@
 
 === 1.0.23 ===
 * Added <common/variadic.h> header for support of variadic templates.
+* Added <common/singletone.h> header for thread safe initialization of singletone data.
 
 === 1.0.22 ===
 * Updated build scripts.
